--- a/index.html
+++ b/index.html
@@ -565,8 +565,7 @@
             
             // Gather form data
             const formData = {
-                first_name: document.getElementById('firstName').value,
-                last_name: document.getElementById('lastName').value,
+                patient_name: document.getElementById('firstName').value + ' ' + document.getElementById('lastName').value,
                 date_of_birth: document.getElementById('dateOfBirth').value,
                 phone: document.getElementById('phone').value,
                 pickup_address: document.getElementById('pickupAddress').value,
