FIX: Change destination_address to dropoff_address for API compatibility

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                 date_of_birth: document.getElementById('dateOfBirth').value,
                 phone: document.getElementById('phone').value,
                 pickup_address: document.getElementById('pickupAddress').value,
-                destination_address: document.getElementById('destinationAddress').value,
+                dropoff_address: document.getElementById('destinationAddress').value,
                 appointment_date: document.getElementById('appointmentDate').value,
                 appointment_time: document.getElementById('appointmentTime').value,
                 trip_type: document.getElementById('tripType').value,
