ADD: Email field to booking form - required for portal account creation

--- a/index.html
+++ b/index.html
@@ -566,6 +566,7 @@
             // Gather form data
             const formData = {
                 patient_name: document.getElementById('firstName').value + ' ' + document.getElementById('lastName').value,
+                email: document.getElementById('email').value,
                 date_of_birth: document.getElementById('dateOfBirth').value,
                 phone: document.getElementById('phone').value,
                 pickup_address: document.getElementById('pickupAddress').value,
