--- a/index.html
+++ b/index.html
@@ -407,6 +407,12 @@
                         </div>
                         
                         <div>
+                            <label for="email" class="block text-sm font-semibold text-gray-700 mb-2">Email Address</label>
+                            <input type="email" id="email" name="email" placeholder="your.email@example.com"
+                                   class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-600">
+                        </div>
+                        
+                        <div>
                             <label for="phone" class="block text-sm font-semibold text-gray-700 mb-2">Phone Number *</label>
                             <input type="tel" id="phone" name="phone" placeholder="(555) 555-5555" required
                                    class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-600">
@@ -566,7 +572,7 @@
             // Gather form data
             const formData = {
                 patient_name: document.getElementById('firstName').value + ' ' + document.getElementById('lastName').value,
-                email: document.getElementById('email').value,
+                email: document.getElementById('email').value || null,
                 date_of_birth: document.getElementById('dateOfBirth').value,
                 phone: document.getElementById('phone').value,
                 pickup_address: document.getElementById('pickupAddress').value,
