Change insurance to dropdown with Kern County providers

--- a/index.html
+++ b/index.html
@@ -466,8 +466,24 @@
                         
                         <div>
                             <label for="insuranceCompany" class="block text-sm font-semibold text-gray-700 mb-2">Insurance Company</label>
-                            <input type="text" id="insuranceCompany" name="insuranceCompany" placeholder="Medi-Cal, Medicare, etc."
+                            <select id="insuranceCompany" name="insuranceCompany"
                                    class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-600">
+                                <option value="">Select Insurance Provider</option>
+                                <option value="Medi-Cal">Medi-Cal</option>
+                                <option value="Medicare">Medicare</option>
+                                <option value="Kern Family Health Care">Kern Family Health Care</option>
+                                <option value="Blue Cross Blue Shield">Blue Cross Blue Shield</option>
+                                <option value="Blue Shield of California">Blue Shield of California</option>
+                                <option value="Aetna">Aetna</option>
+                                <option value="United Healthcare">United Healthcare</option>
+                                <option value="Cigna">Cigna</option>
+                                <option value="Kaiser Permanente">Kaiser Permanente</option>
+                                <option value="Health Net">Health Net</option>
+                                <option value="Molina Healthcare">Molina Healthcare</option>
+                                <option value="Anthem">Anthem</option>
+                                <option value="Other">Other</option>
+                                <option value="Self-Pay">Self-Pay</option>
+                            </select>
                         </div>
                         
                         <div>
