--- a/Documents/gvtindex/index.html
+++ b/Documents/gvtindex/index.html
@@ -110,8 +110,8 @@
                     <a href="#services" class="text-gray-700 hover:text-purple-600 font-medium transition">Services</a>
                     <a href="#about" class="text-gray-700 hover:text-purple-600 font-medium transition">About</a>
                     <a href="#contact" class="text-gray-700 hover:text-purple-600 font-medium transition">Contact</a>
-                    <a href="tel:+16615550123" class="btn-primary">
-                        <i class="fas fa-phone mr-2"></i>Call Now
+                    <a href="tel:+18773786368" class="btn-primary">
+                        <i class="fas fa-phone mr-2"></i>Call (877) 378-NEMT
                     </a>
                 </div>
                 
@@ -138,8 +138,8 @@
                         <a href="#contact" class="btn-primary text-center">
                             <i class="fas fa-calendar-check mr-2"></i>Schedule Your Ride
                         </a>
-                        <a href="tel:+16615550123" class="btn-secondary text-center">
-                            <i class="fas fa-phone mr-2"></i>(661) 555-0123
+                        <a href="tel:+18773786368" class="btn-secondary text-center">
+                            <i class="fas fa-phone mr-2"></i>(877) 378-NEMT
                         </a>
                     </div>
                 </div>
@@ -341,8 +341,8 @@
                             </div>
                             <div>
                                 <h4 class="font-semibold text-gray-800 mb-1">Phone</h4>
-                                <a href="tel:+16615550123" class="text-purple-600 hover:text-purple-700 font-semibold text-lg">
-                                    (661) 555-0123
+                                <a href="tel:+18773786368" class="text-purple-600 hover:text-purple-700 font-semibold text-lg">
+                                    (877) 378-NEMT
                                 </a>
                             </div>
                         </div>
@@ -518,7 +518,7 @@
                 <div>
                     <h4 class="font-bold mb-4">Contact Us</h4>
                     <ul class="space-y-2 text-gray-200">
-                        <li><i class="fas fa-phone mr-2"></i>(661) 555-0123</li>
+                        <li><i class="fas fa-phone mr-2"></i>(877) 378-NEMT</li>
                         <li><i class="fas fa-envelope mr-2"></i>info@goldenvalleytransit.com</li>
                         <li><i class="fas fa-map-marker-alt mr-2"></i>Bakersfield, CA 93301</li>
                     </ul>
@@ -612,7 +612,7 @@
                 
             } catch (error) {
                 document.getElementById('errorText').innerHTML = 
-                    error.message + '<br>Please call us at (661) 555-0123 for assistance.';
+                    error.message + '<br>Please call us at (877) 378-NEMT for assistance.';
                 errorMessage.style.display = 'block';
                 errorMessage.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
             } finally {
