--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="#services" class="text-gray-700 hover:text-purple-600 font-medium transition">Services</a>
-                    <a href="#about" class="text-gray-700 hover:text-purple-600 font-medium transition">About</a>
+                    <a href="about.html" class="text-gray-700 hover:text-purple-600 font-medium transition">About</a>
                     <a href="#contact" class="text-gray-700 hover:text-purple-600 font-medium transition">Contact</a>
                     <a href="tel:+18773786368" class="btn-primary">
                         <i class="fas fa-phone mr-2"></i>Call (877) 378-NEMT
@@ -509,9 +509,9 @@
                     <h4 class="font-bold mb-4">Quick Links</h4>
                     <ul class="space-y-2">
                         <li><a href="#services" class="text-gray-200 hover:text-white transition">Services</a></li>
-                        <li><a href="#about" class="text-gray-200 hover:text-white transition">About Us</a></li>
+                        <li><a href="about.html" class="text-gray-200 hover:text-white transition">About Us</a></li>
                         <li><a href="#contact" class="text-gray-200 hover:text-white transition">Contact</a></li>
-                        <li><a href="#" class="text-gray-200 hover:text-white transition">Privacy Policy</a></li>
+                        <li><a href="privacy.html" class="text-gray-200 hover:text-white transition">Privacy Policy</a></li>
                     </ul>
                 </div>
                 
