Update About and Privacy pages - remove names, fix branding, improve phone visibility

--- a/about.html
+++ b/about.html
@@ -93,8 +93,16 @@
             padding: 0.75rem 1.5rem;
             border-radius: 50px;
             text-decoration: none;
-            font-weight: 600;
+            font-weight: 700;
+            font-size: 1rem;
             transition: transform 0.3s, box-shadow 0.3s;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+        
+        .cta-button i {
+            font-size: 1.1rem;
         }
         
         .cta-button:hover {
@@ -457,7 +465,7 @@
             <div class="story-text">
                 <p>Golden Valley Transit was founded with a simple mission: ensure that every patient in Kern County has reliable access to their medical appointments, regardless of their mobility challenges.</p>
                 <p>What started as a small operation with just two vehicles has grown into a trusted medical transportation provider serving thousands of patients across Bakersfield and the greater Kern County area.</p>
-                <p>Under the medical direction of Dr. Justin DeGuzman and Dr. Neal Johnson, we maintain the highest standards of patient care and safety. Our team understands that medical transportation is healthcare, and we treat it with the same professionalism and compassion.</p>
+                <p>Under professional medical direction, we maintain the highest standards of patient care and safety. Our team understands that medical transportation is healthcare, and we treat it with the same professionalism and compassion.</p>
             </div>
             <div class="story-stats">
                 <div class="stat-box">
@@ -492,8 +500,8 @@
                     </div>
                 </div>
                 <div class="team-card-body">
-                    <h3>Dr. Justin DeGuzman</h3>
-                    <p class="role">Medical Director</p>
+                    <h3>Medical Director</h3>
+                    <p class="role">Clinical Oversight</p>
                     <p>Providing medical oversight and ensuring our transportation services meet the highest healthcare standards.</p>
                 </div>
             </div>
@@ -504,8 +512,8 @@
                     </div>
                 </div>
                 <div class="team-card-body">
-                    <h3>Dr. Neal Johnson</h3>
-                    <p class="role">Medical Director</p>
+                    <h3>Medical Director</h3>
+                    <p class="role">Safety & Compliance</p>
                     <p>Ensuring patient safety protocols and medical compliance across all transportation operations.</p>
                 </div>
             </div>
